--- a/cfg/java-gradle/buildenv/example/JarExample/README
+++ b/cfg/java-gradle/buildenv/example/JarExample/README
@@ -4,12 +4,13 @@ This is a simple example project for generating logs automatically. To run this 
 $ cd JarProject
 $ gradle build
 
-2. Build main application using gradle
+2. Build main application using gradle and goto 'step 3' or 'step 4'
 $ cd ../DriverProject
 $ gradle build
 
-3. Run the application and save log as a file.
+3. Run the application to save log file and execute Sherlock in file mode.
 $ gradle run > log.txt
+$ python3.4 Sherlock.py -f log.txt -c ../cfg/java-gradle/java-aspectj-custom.cfg
 
-4. Use Shelock to generate behavioural diagram with the log file.
-
+4. Run the application and execute Sherlock in batch mode.
+$ gradle run | python3.4 ../../../../../../src/Sherlock.py -b -c ../../../../java-aspectj-custom.cfg
